// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Cart Component with Items Cart Component should render properly 1`] = `
<div
  className="cart-container"
>
  <div
    className="cart-header"
  >
    <div
      className="header-item"
    >
      Product
    </div>
    <div
      className="header-item"
    >
      Price
    </div>
    <div
      className="header-item"
    >
      Quantity
    </div>
    <div
      className="header-item"
    >
      Total
    </div>
  </div>
  <div
    className="cart-product-container"
  >
    <div
      className="cart-product-name-container"
    >
      <img
        alt="Cart Product"
        className="cart-product-image"
        src="http://truth-events.com/wp-content/uploads/2019/09/dummy.jpg"
        width={50}
      />
      <div
        className="cart-product-name"
      >
        Product 1
      </div>
    </div>
    <div
      className="cart-product-info"
    >
      ₹
      100.00
    </div>
    <div
      className="cart-product-info"
    >
      <span
        onClick={[Function]}
      >
        -
      </span>
      10
      <span
        onClick={[Function]}
      >
        +
      </span>
    </div>
    <div
      className="cart-product-info"
    >
      ₹
      1000
    </div>
  </div>
  <div
    className="cart-footer"
  >
    <hr />
    <div
      className="footer-item"
    >
      Total: ₹
    </div>
  </div>
</div>
`;

exports[`Testing Cart Component with No Items Cart Component should render properly 1`] = `
<div
  className="cart-container"
>
  <div
    className="cart-header"
  >
    <div
      className="header-item"
    >
      Product
    </div>
    <div
      className="header-item"
    >
      Price
    </div>
    <div
      className="header-item"
    >
      Quantity
    </div>
    <div
      className="header-item"
    >
      Total
    </div>
  </div>
</div>
`;
